# dotfiles

./: .drone.jsonnet  .drone.star  .drone.yml  .envrc  .gdbinit  .gitignore  .gitlab-ci.yml  .gitmodules  .mergify.yml  .sops.yaml  .typos.toml  GITHUB_ISSUE_STRACE_DARWIN.md  LICENSE.md  Readme.md  STRACE_DARWIN_SPEC.md  bors.toml  ci.nix  configuration.nix  deploy_nixos.py  flake.nix  gce.nix  hardware-configuration.nix  home-manager-common.nix  home-manager-desktop.nix  home-manager.nix  install-iso.nix  inventory.json  network-configuration.nix  network.nix  output.txt  outputs.nix  packages.nix  pyproject.toml  renovate.json  retiolum.hosts  shell.nix  tasks.py
.config/: htop
.github/: dependabot.yml  settings.yml
.nixpkgs/: config.nix
checks/: effects.nix  flake-module.nix
darwin/: flake-module.nix
darwinModules/: casks.nix  firefox.nix  homebrew.nix  hyprspace.nix  nix-casks.nix  nix-daemon.nix  nix-index.nix  openssh.nix  remote-builder.nix  retiolum.nix  secretiv.nix  sudo.nix
devshell/: flake-module.nix
environments/: README.md
etc/: dnsmasq.conf  nsswitch.conf  yaourtrc
home/: .Xresources  .agignore  .bash_aliases  .bash_profile  .bash_prompt  .bashrc  .bashrc.load  .dircolors.256dark  .dircolors.ansi-dark  .dircolors.tokyonight-night  .direnvrc  .emacs  .fast-syntax-highlighting  .fish-async-prompt  .fish-autopair  .fish-pure  .gdbinit  .gdbinit-gef.py  .gef-extras  .gef-mic92  .gef.rc  .gemrc  .gitattributes  .gitconfig  .gitignore  .hgrc  .irbrc  .mbsyncrc  .msmtprc  .notmuch-config  .npmrc  .nvimrc  .pryrc  .radare2rc  .ruby-agignore  .spacemacs  .tigrc  .tmux.conf  .vimrc  .xinitrc  (+16 more)
home-manager/: bernie.nix  coder.nix  common.nix  config.nix  desktop.nix  eve.nix  flake-module.nix  graphical.nix  macos-desktop.nix  macos.nix  utm-vm.nix
lxc-container/: default.nix
machines/: flake-module.nix  inventory.nix
nixos/: .editorconfig  .sops.yaml  awesome.nix  backup.nix  bird.nix  ci.nix  cloudlab-node.nix  cloudlab.nix  configuration.nix  configurations.nix  dice.nix  flake-module.nix  gce.nix  hardware-configuration.nix  install-image.nix  install-iso.nix  install-nova-image.nix  kde.nix  krops.nix  network-configuration.nix  network.nix  nfs.nix  nix.nix  nixpkgs.nix  packages.nix  repl.nix  rock.nix  shell.nix  test-vm.nix  tinc.nix  uni-edinburgh.ovpn
nixos/modules/xonsh/: bincalc.py  default.nix  flake-module.nix  flake.nix  my_extensions.py  pyproject.toml  shell.nix  xonsh.rc  xonsh_extensions.py
nixosModules/: borgbackup-zfs-snapshots.nix  borgbackup.nix  builder.nix  data-mesher.nix  default.nix  docker-zfs.nix  fhs-compat.nix  fish.nix  flood.nix  fluent-bit.nix  gnome.nix  hide-nix-store.nix  hyprland.nix  hyprspace-public.nix  hyprspace.nix  i18n.nix  ip-update.nix  iperf.nix  iroh-ssh.nix  lanzaboote.nix  limine.nix  make-linux-fast.nix  minimal-docs.nix  networkd.nix  nftables.nix  nginx-quic-preread.nix  nix-daemon.nix  nix-path.nix  nncp.nix  packages.nix  pipewire.nix  promtail.nix  qtile.nix  radicle-github-sync.nix  radicle-mic92.nix  radicle-node.nix  remote-builder.nix  retiolum.nix  rqbit.nix  rtorrent.nix  (+20 more)
nixpkgs-config/: 0001-remove-outer-paragraph.patch  bernie.nix  bitwarden.nix  brain.nix  common.nix  config.nix  darwin-configuration.nix  desktop.nix  emacs.nix  eve.nix  gdbgui.patch  home.nix  homes.nix  latex.nix  rhasspy-play  rust.nix  vim.nix  weechat.nix
openwrt/: Justfile  README.md  apply.sh  example.nix  flake-module.nix  flake.nix  pyproject.toml  secrets.yml  setup.cfg  upgrade.sh
openwrt/nix/: default.nix  module-options.nix  nix-uci.nix
openwrt/nix_uci/: __init__.py
overlays/: mcp-fix.nix
pkgs/: aerc-patched.nix  flake-module.nix  librewolf-policies.nix
secrets/: default.nix  secret1.age  secrets.nix
terraform/: .envrc  .envrc.private-template  README.md  gitlab.nix  (+3 more)
(+2874 files in other folders)
