[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nix-uci"
version = "0.0.1"
description = "Convert nixos modules to UCI commands"
authors = [
    {name = "Jörg Thalheim", email = "joerg@thalheim.io"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Mic92/dotfiles"

[project.scripts]
nix-uci = "nix_uci:main"

[tool.setuptools]
packages = ["nix_uci"]
zip-safe = true
include-package-data = true

[tool.mypy]
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
lint.select = ["ALL"]
lint.ignore = [
    "T201",
    "S603",
    "TD003",
    "FIX002",
    "S607",
    "E501",
    "D203",  # incompatible with D211
    "D213",  # incompatible with D212
]
