[metadata]
name = nix-uci
version = 0.0.1
author = Jörg Thalheim
author-email = joerg@thalheim.io
home-page = https://github.com/Mic92/dotfiles
description = Convert nixos modules to UCI commands
license = MIT
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.8
packages = find:
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
    nix-uci = nix_uci:main

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true[wheel]
universal = 1

[pycodestyle]
max-line-length = 88
# E203 conflicts with black
ignore = E501,E741,W503,E203

[flake8]
max-line-length = 88
# E203 conflicts with black
ignore = E501,E741,W503,E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-setuptools.*]
ignore_missing_imports = True
